# python-splunk-logging

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  pypi-publish.yml  test.yml
splunk_logging/: __init__.py  exceptions.py  formatters.py  forwarders.py  handlers.py
test/: test_forwarder.py  test_handler.py  test_json_formatter.py  test_metadata.py
