[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-splunk-logging"
version = "1.0.0"
description = "Python logging module for logging json formatted log messages to a HTTP Event Collector (HEC)."
authors = [
    { name = "Alexander Baker", email = "alexb@splunk.com" },
    { name = "Eric Li", email = "ericli@splunk.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["cisco", "splunk", "logging", "http", "hec", "json"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
    "Natural Language :: English",
]
dependencies = [
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "python-semantic-release>=10.4.1",
    "respx>=0.22.0",
    "ruff>=0.12.4",
    "tox>=4.27.0",
    "tox-uv>=1.26.1",
]

[project.urls]
repository = "https://github.com/splunk/python-splunk-logging"

[tool.hatch.build.targets.wheel]
packages = ["splunk_logging"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = ["test"]

[tool.ruff.lint]
select = ["F", "E", "N", "A", "C4", "ISC", "PT", "Q", "RET", "SLF", "ARG", "PTH", "RUF"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version", "splunk_logging/__init__.py:__version__"]
commit_parser = "conventional"
commit_message = "chore(release): update version to ${version} [skip ci]"
assets = ["pyproject.toml", "uv.lock"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    uv build
"""

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.tox]
requires = ["tox>=4"]
env_list = ["lint", "format", "test"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]

[tool.tox.env.lint]
description = "run ruff linter and check formatting"
skip_install = true
commands = [["ruff", "check"], ["isort", "--check", "."], ["black", "--check", "."]]

[tool.tox.env.format]
description = "format python files with black & isort"
skip_install = true
commands = [["isort", "."], ["black", "."]]

[tool.tox.env.test]
description = "run unit tests"
commands = [["python", "-m", "unittest", "discover", "-s", "test"]]

